Added a get handler that returns an array of tasks by user id.
